add: site server

--- a/dht/index.html
+++ b/dht/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <h1>ESP Web Server</h1>
-    <h2>DTH11: <h2>
+    <h2>DTH11: </h2>
         <p><strong>Temperatura:</strong>"""+ temp + """</p>
         <p><strong>Humedad:</strong>"""+ humedad + """</p>
 </body>
